-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.1
-
1ef8188a086c96722f4546ca015cefbe69d7693e (qt/qtbase/dev) 44308ce1e0b09bddc4af6b4c03e03de5e82a66d3 (qt/qtbase/6.2)
When using QMenu::icon:checked inside a stylesheet it is being ignored and has no effect. Being able to style the icon case would be ideal (and is currently documented to be possible) since now that icons and checkboxes can exist side by side, it would enable the stylesheet to determine what exactly is drawn in this case for a checked icon.
Ideally it will respect this rule and not draw an icon and a checkbox side by side. Alternatively, adding support for something like a hasIcon selector would be good too.
| For Gerrit Dashboard: QTBUG-73966 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 359567,4 | Respect style sheet rules for checked and selected menu items | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 359568,6 | Support styled menu icons in otherwise unstyled menu items | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 359843,2 | Support styled menu icons in otherwise unstyled menu items | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
| 359931,2 | Respect style sheet rules for checked and selected menu items | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |