Respect style sheet rules for checked and selected menu items

With a stylesheet that defines a rule for checked:selected menu items,
the rule was never rendered. Instead, the checked rule was used.

The 'act' variable was initialized based on State_Selected being set, but
that state flags was never set on the temporary QStyleOptionMenuItem
used to render the PE_IndicatorMenuCheckMark.

Note: QStyleSheetStyle falls back to QWindowsStyle for this draw path.

Task-number: QTBUG-73966
Change-Id: I3044dbe8f60f1896f79af1afdb26094971704616
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 70e4a70265d6066ef04c7ed5700dadade72ef44c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>